--- a/css/pricing.css
+++ b/css/pricing.css
@@ -47,6 +47,6 @@ body {
     }
 
     h2 {
-        text-align: center;
+        font-size: 1.2em;
     }
 }
